[ der_wandersmann ] typo fixes, chord fixes, final
GH-2

this song is now considered finished :)

--- a/src/der_wandersmann/LaTeX/der_wandersmann.tex
+++ b/src/der_wandersmann/LaTeX/der_wandersmann.tex
@@ -18,7 +18,7 @@
         \gtab{G}{320033:210034}
         \gtab{Dm}{XX0231:000231}
         \gtab{Am}{X02210:002310}
-        \gtab{Fm/D}{3:XX0342:000231}
+        \gtab{Fm6/D}{3:XX0342:000231}
         \gtab{Am/D}{5:XX0111:000111}
     \end{center}
 
@@ -35,9 +35,9 @@
         als \[Dm]einst von fern das J\[C]agdhorn schallt
         und J\[G]\"{a}ger hetzten d\[C]urch den Wald.
 
-        Der H\[Dm]irsch drohte z\[Fm/D]u entkomm\[Am/D]en,
-        doch r\[C]annte ich schneller \[G]als das Tier,
-        mit blo\ss{}er F\[Dm]aust nied\[Fm/D]erger\[Am/D]ungen;
+        Der H\[Dm]irsch drohte z\[Fm6/D]u entkomm\[Am/D]en,
+        doch r\[C]annte ich schneller als \[G] das Tier,
+        mit blo\ss{}er F\[Dm]aust n\[Fm6/D]iederger\[Am/D]ungen;
         das Gew\[C]eih hier \[G]als Bew\[Am]eis daf\"{u}r!
     \endverse
 
@@ -48,7 +48,7 @@
         und M^ann und Maus vom Sch^iffsdeck sp\"{u}lt.
 
         Das Sch^iff droht^e zu sin^ken,
-        die S^egel rissen w^ie Papier.
+        die S^egel rissen wie ^ Papier.
         Ich holte L^uft und bl^ie\ss{} den St^urm fort;
         das L^einen ^als Bew^eis daf\"{u}r!
     \endverse
@@ -80,7 +80,7 @@
 
         Es l^eckten Fl^ammen ^in die Welt,
         als ^offen stand die H^\"{o}llent\"{u}r.
-        Ich schlug sie z^u und m^ein Schloss h^\"{a}lt;
+        Ich schlug sie z^u und mein ^ Schloss h\"{a}lt; ^
         der Schl^\"{u}ssel ^als Bew^eis daf\"{u}r!
     \endverse
 
